<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">一卦</string>
    <string name="action_settings">设置</string>
    <string name="saved_to_album">保存到相册</string>
    <string name="error_internet">网络错误</string>
    <string name="login_time_out">登录超时</string>
    <string name="jump_googleplay_fail">打开应用商店失败</string>
    <string name="select">选择</string>
    <string name="ok">好的</string>
    <string name="sure">确定</string>
    <string name="slogen">一卦，一天一卦</string>
    <string name="tips_main">本应用仅用于弘扬交流传统文化，切勿迷信传播</string>
    <string name="app_email">gj009351@email.com</string>
    <string name="app_descript">  这是一款关于万年历、阴历、算命、八卦等的工具软件，感谢您的使用。仅用于弘扬交流传统文化，切勿迷信传播！</string>
    <string name="share_content">最好看的万年历，最有趣的算卦软件</string>
    <string name="update">更新</string>
    <string name="cancel">取消</string>
    <string name="go_download">去下载</string>
    <string name="loading">加载中</string>
    <string name="share">分享</string>
    <string name="date_scroll">日期跳转</string>
    <string name="word">我</string>
    <string name="jishen">吉神方位</string>
    <string name="taishen">胎神</string>
    <string name="xingxiu">星宿</string>
    <string name="pengzu">彭祖</string>
    <string name="wuxing">五行</string>
    <string name="zhixing">建除十二神\n（当日值星）</string>
    <string name="chongsha">冲煞</string>
    <string name="jiuxing">九星</string>
    <string name="tip_input_name">请输入昵称</string>
    <string name="edit_name">修改昵称</string>
    <string name="noduty">免责声明</string>
    <string name="noduty_content">  这是一款关于万年历、阴历、算命、八卦等的工具软件，旨在为广大中国传统文化爱好者提供一种方便、快捷、舒适的查阅体验。
        \n  当您在生活中做任何事情或决定时，如有参考本应用中的意见或指导而导致的任何结果，一卦概不负责，亦不承担任何法律责任。
        \n  如您在一卦中通过广告而接触到其他内容，此系广告服务商提供的内容，一卦概不负责，亦不承担任何法律责任。
        \n  一卦不做任何形式的保证，不保证关于万年历、阴历、阳历、算命、八卦等相关内容能满足您的要求，不保证应用内广告内容能满足您的要求，不保证以上内容的安全性，正确性，及时性，合法性。
        \n  一卦尊重并保护所有使用一卦的用户的个人隐私权，非经您亲自许可或根据相关法律、法规的强制性规定，一卦不会主动地将您的个人隐私泄露给第三方。
        \n  一卦希望广大中国传统文化爱好者通过本应用学到一定的知识，通过本应用的使用及交流使自己的生活更方便、舒适、快捷，并能主动地弘扬中国传统文化。
        \n  任何单位或个人如有在未告知作者及应用所有人的情况下，利用一卦非法牟利，一卦概不负责，亦不承担任何法律责任，并且一卦有权向其追究法律责任。
        \n  任何单位或个人如有认为一卦应用内的内容可能涉嫌侵犯其信息网络传播权或知识产权，应该及时向一卦提出书面通知，并提供身份证明、权属证明及详细侵权情况证明。一卦在收到上述内容后，将及时做出依法整改相关内容。
        \n  最后告诫用户：本应用仅用于弘扬交流传统文化，切勿迷信传播！</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string-array name="setting_list" >
        <item>@string/date_scroll</item>
        <item>@string/share</item>
        <item>@string/setting</item>
        <item>@string/about</item>
    </string-array>
    <string name="tip_shicaozhanbu">首先，筮者要准备五十根蓍草，取出一根，横放在正前方，代表“太极”
        ，在整个运算过程中保持不动。真正进行运算的，是为四十有九(大衍之数五十，其用四十有九)。然后默念心中所问。
\n第一次运算：
\n1.任意分四十九根为两组，甲与乙。(分而为二以象两)
\n2.从甲组中取出一根，放置于左手二指之间。(挂一以象三，天地人三才也。)
\n3.甲组以四除之。(揲之以四以象四时)
\n4.甲组所余之数，为一或二或三或四，(若无余数，则取出四根)将此余数也放置于左手二指之间。(归奇于扐以象闺)
\n5.乙组以四除之。(再揲之以四，以象四时)
\n6.乙组所余之数，为一或二或三或四，将此余数也放置于左手二指之间。
\n7.将左手二指之间所得之根数置于左斜上角。所余者为四十四根或四十根。
\n第二次运算：
\n1.将所余之四十四根或四十根，任意分为甲乙两组。
\n2.重复第一次运算中的2-7，将左手二指之间所得之根数置于左斜上角，但勿与前次的重叠。此时余数应为四十或三十六或三十二。
\n第三次运算：
\n1.将第二次运算所余之数，任意分为甲乙两组。
\n2.重复第一次运算中的2-7，将左手二指之间所得之根数置于左斜上角，但勿与前两次的重叠。此时余数应为三十六或三十二或二十八或二十四。
\n3.最后留在桌上的余数以四除之，得到九或八或七或六。九与七为阳爻，八与六为阴爻。
\n经过以上三次运算得到初爻，知其为阴爻或阳爻，阴爻记为虚线“——”，阳爻记为实线“一”并且记下数字(九或八或七或六)，
        如此，再“重复”五次，得到由下往上的五爻。六爻共需十八次运算，是为“十有八变而成卦”。所形成的卦是为“本卦”。
        九为老阳，七为少阳;六为老阴，八为少阴。本着“物老则变”的原则，九、六为可变之爻（阴变为阳，阳变为阴）;
        七、八为不变之爻。经过九由阳变阴与六由阴变阳，再形成“之卦”。本卦与之卦配合，提供所占之事的线索。</string>

    <string name="tip_zhiqianzhanbu">起卦前要默念自己所问之事，念完后把三个铜钱合在手心约一分钟，晃动手掌，将铜钱掷在桌子（或平的平面上观察铜钱的正反。铜钱以正面为阳，反面为阴。
这时，铜钱的正反面会有四种组合即：三个正面，三个反面，两正一反，一正两反。凡三个反面为老阳，相当于揲蓍起卦法的“九”，称之为“重”，在纸上记作“”。三个正面为老阴，相当于“六”，称之为“交”，记作“×”。两正一反为少阳，相当于“七”，称之为“单”，记作“、”。一正两反为少阴，相当于“八”，称之为“拆”，记作“、、”。抛掷六次，每次成为一爻，摇六次而成卦。第一次抛掷铜钱所成的爻为初爻，第二次为二爻，依次为三爻、四爻、五爻、上爻。
画爻时要按照从初爻到上爻，即从下向上的顺序。
\n还要根据“阳极变阴，阴极变阳”的原则，把老阴要变成阳，老阳要变成阴。
        \n解卦方法：
\n第一种情况：算出来的六爻当中只有一个爻是变爻，用本卦变爻的爻辞占。
\n第二种情况：有两个变爻，用本卦出现的第二个变爻爻辞占，以上爻的爻辞为主。
\n第三种情况：有三个变爻，用本卦和变卦的卦辞占，以本卦的卦辞为主。
\n第四种情况：有四个变爻，用变卦的两个不变爻的爻辞占，以下爻的爻辞为主。
\n第五种情况：有五个变爻，用变卦的那一个不变爻的爻辞占。
\n第六种情况：有六个变爻，分两种情况：
\n一是六爻都是阳爻，即乾卦；或者六爻都是阴爻，即坤卦。如果是乾卦，就用乾卦“用九”的爻辞占。如果是坤卦，就用坤卦“用六”的爻辞占。
\n二是除了这两种情况之外的其他六爻全变的情况，就用变卦的卦辞占。
\n第七种情况：六爻一个都没变，这时用本卦的卦辞占。</string>

    <string name="tip_chenggusuanming">称骨算命是算命方法的一种，和生辰八字算命、紫微斗数算命异曲同工，略有不同，虽然都是用出生的时间算命，但比较而言，称骨算命将命运分的比较粗略，只是把命运分为五十一种。
故对命运的考察不细致，不太准确，可以供求测者参考。其将出生年月日都转化为对应重量，然后合并计算求测者命运。</string>

    <string name="tip_baguasuanming">生辰八字，简称八字，是指一个人出生时的干支历日期；年月日时共四柱干支
        ，每柱两字，合共八个字。生辰八字在中国民俗信仰中占有重要地位，古代中国道家、星相家据此推算人的命运的好坏。
八字预测术在实践中不断发展，从李虚中的三柱、到徐子平的四柱，到人体生物节律学传授的四柱太阳律月亮律，每一个阶梯的递进，都包含着历代学者与社会实践活动者的辛勤付出。
要得到正确的出生时间，古代中国人民认为在白天以日晷仪测量最准。钟表时间是人为的平均时和地区标准时
        ，必须依节气（太阳黄经）计算“真太阳时差”与依出生地计算“地方经度时差”，才能得到真正的出生天文时间。
在历书中，年的干支与日的干支基本都有，而月与时的天干可以依据年、日的干支按口诀推算得出。</string>

    <string name="tip_xingmingpingfen">说明：字的笔划以《康熙字典》为准，康熙笔划计算方法与简体笔划有所区别，
        不能以现在计算笔划的方法去计算。为保证本站提供的测算内容精准，编辑人员花费了大量时间和精力与《康熙字典》
        原版进行核对。如果您发现错误，敬请及时与我们联系，谢谢！
        \n什么是天格？
        \n天格是由您的姓决定的，姓是祖辈流传下来的。它的数理对人生并无直接的影响。所以，天格的吉凶数理不用重视。
        在测名字的时候，也会有天格的数理吉凶解释，那是对这个数字的解释，本身无太大意义。
        \n什么是人格？
        \n人格数又称主运，是姓名的中心点，影响人一生的命运。人格非常重要，是这个名字的中心、精髓！
        人格的吉凶，对人的影响很大，就如四柱当中的日柱一样，是判断名字好坏吉凶的一个标准。
        \n什么是地格？
        \n地格数又称前运，影响人中年（36岁）以前的活动力。
        \n地格和人格有密切的关系，主要影响人年轻时的命运，地格也比较重要。其数理吉凶，也代表与子女、部属、晚辈的关系。
        \n什么是外格？
        \n外格又称变格，影响人的社交能力、智慧等。
        \n外格通常指和社会上的关系的融洽程度，在实际预测中其准确度较低，对人生的作用不是很大，在专业预测当中也很少去用。外格的数理不用重视。
        \n什么是总格？
        \n总格又称后运，影响人中年（36岁）以后的命运。判断名字的吉凶，一般先看总格，再看人格。总格对人的晚运和一生运势均有影响。
        总格就如植物的根，根好则枝繁叶茂。因此，名字吉凶一定要看总格。</string>

    <string name="tips_tiange">天格：天格是由您的姓决定的，姓是祖辈流传下来的。它的数理对人生并无直接的影响。所以，天格的吉凶数理不用重视。
        在测名字的时候，也会有天格的数理吉凶解释，那是对这个数字的解释，本身无太大意义。</string>
    <string name="tips_dige">地格：地格和人格有密切的关系，主要影响人年轻时的命运，一般指人中年（36岁）以前的活动力。地格比较重要，其数理吉凶，也代表与子女、部属、晚辈的关系。</string>
    <string name="tips_renge">人格：人格非常重要，是这个名字的中心、精髓！
        人格的吉凶，对人的影响很大，就如四柱当中的日柱一样，是判断名字好坏吉凶的一个标准。</string>
    <string name="tips_waige">外格：外格通常指和社会上的关系的融洽程度，在实际预测中其准确度较低，对人生的作用不是很大，在专业预测当中也很少去用。外格的数理不用重视。</string>
    <string name="tips_zongge">总格：总格又称后运，影响人中年（36岁）以后的命运。判断名字的吉凶，一般先看总格，再看人格。总格对人的晚运和一生运势均有影响。
        总格就如植物的根，根好则枝繁叶茂。因此，名字吉凶一定要看总格。</string>
    <string name="known">知道了</string>
    <string name="wait_open">暂未开放，敬请期待</string>
    <string name="tip_xingzuomingyun" >
        星座运势指的是根据一个人出生日期（阳历）所属的星座，来论定该星座在每一个流年甚至月份上发生事情的吉凶。
        \n以个人的出生时间论定星座，每个星座日期如下：
        \n水瓶座01月20日～02月18日
        \n双鱼座02月19日～03月20日
        \n白羊座03月21日～04月20日
        \n金牛座04月21日～05月20日
        \n双子座05月21日～06月21日
        \n巨蟹座06月22日～07月22日
        \n狮子座07月23日～08月22日
        \n处女座08月23日～09月22日
        \n天秤座09月23日～10月23日
        \n天蝎座10月24日～11月22日
        \n射手座11月23日～12月21日
        \n摩羯座12月22日～01月19日
    </string>
    <string name="tip_xingzuopeidui" >
        星座配对测试星座配对查询是依据西方占星命理学中十二星座相配与相斥的理论为你解析12星座互配的奥秘。
        \n以个人的出生时间论定星座，每个星座日期如下：
        \n水瓶座01月20日～02月18日
        \n双鱼座02月19日～03月20日
        \n白羊座03月21日～04月20日
        \n金牛座04月21日～05月20日
        \n双子座05月21日～06月21日
        \n巨蟹座06月22日～07月22日
        \n狮子座07月23日～08月22日
        \n处女座08月23日～09月22日
        \n天秤座09月23日～10月23日
        \n天蝎座10月24日～11月22日
        \n射手座11月23日～12月21日
        \n摩羯座12月22日～01月19日
    </string>
    <string name="tip_shengxiaopeidui" >
        生肖配对，是根据十二属相之间相合、相冲、相克、相害、相生、相刑的规律而产生的一种婚姻配对法，流行于民间。
在命理学中，十二生肖与十二地支相对应，十二地支具有五行相生相克及刑冲会合的关系。如子鼠与午马相冲相克，与卯兔相生又相刑，与丑牛相合又相害，等等。
生肖配对，即根据上述理论编排而成。其实八字合婚在算命服务中，是一件非常繁杂的事情，要通过分析男女八字中的很多项对应信息，生肖是否相合，对于判定结果的影响，只占其中很小的比例，所以生肖配对，仅供参考！
        \n十二生肖具体有：鼠、牛、虎、兔、龙、蛇、马、羊、猴、鸡、狗、猪。
    </string>
    <string name="tips_edit_zhugeshensuan">请输入三个简体汉字，不能是数字或其他字符，我们将通过古代流传的诸葛神数为您测字解签。随心写三个字，这三个字，可以跟预测的内容相关，可以不相关，这三个字要随心而起，脱口而出，不能绞尽脑汁，斟酌再三，简体字即可，无需特意输入繁体字。</string>
    <string name="tips_zhugeshensuan" >
        什么是诸葛神算？
        \n诸葛神算，又称诸葛神数，相传是三国时代杰出的军事家谋略家具有神机妙算之称的诸葛亮所著，秘本云：“是书系旧时抄本，纸皆破碎，乃远代之遗传，世不多觏。其法变化无穷，判断吉凶，如应斯响。余世袭珍藏，视同拱璧。先贤传授此书，以指人迷惑，故未敢自秘，以供同好。惟愿占者诚心祷告，无不灵验如神，慎勿以儿戏为之。”此书据说在民间世代相传，至今已历十七个世纪，小自个人荣辱，家庭得失，大至战役胜负，邦国兴衰，皆可测算，无不灵验如神。
        诸葛神算测字共三百八十四爻，谶语句法，长短不一，寓意深远，前途迷惘者占之，有茅塞顿开之感。斯可作为判断吉凶、决定进退之指南针。
        \n诸葛神算测字方法
        \n当需要预测时，意念始发，随心写三个字，这三个字，可以跟预测的内容相关，可以不相关，这三个字要随心而起，脱口而出，不能绞尽脑汁，斟酌再三，简体字即可。
        \b诸葛神算测字的启示
        \b诸葛神数与六十四卦384爻像对应，共有384签，我们生活中最常见的签辞是下文中的签解一，古诗签辞，句子长短不一，个中启示全靠自己理解。签辞解释与原文若即若离，有的甚至看似毫无关联，其实却暗藏玄机，机缘到时方领略其妙处。同时大家也应注意，世事无常，人行五行中难免遭遇困惑，签辞为我们提供了一种启示，是指路的方向，但大家不可以太过依赖/迷信，这样反而产生副作用。得到指点以后就应该穿过迷惘，昂首挺胸，大步向前，不要沉溺于此。
    </string>
    <string name="tip_zhougongjiemeng">周公，姬姓，名旦，周文王姬昌第四子，周武王姬发之弟，曾辅佐周武王伐纣，建立周朝，并制作礼乐，被儒家奉为先圣，尊称周公。 周公解梦的典故：孔子常言梦见周公，故做梦经常被称为“梦见周公”。孔子以“吾不复梦见周公矣“，表达对儒教礼乐难以兴盛的失落感。所以周公并不曾著述解梦之说，只是借以名之而已。 卜易居·周公解梦，包含原版周公解梦，梦兆吉凶解，此二章皆采自古代文献。现代周公解梦大全，则根据时人的研究，分类编著而成，供朋友们解梦时查询，解梦结果仅供参考。</string>
    <string name="admob_banner_test_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_app_id">ca-app-pub-9923626397118153~8202845924</string>




    <!--  =============================  debug  ==========================       -->
    <string name="admob_reward_unit_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="admob_interstitial_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_banner_main_unit_id">@string/admob_banner_test_unit_id</string>
    <string name="admob_banner_choose_unit_id">@string/admob_banner_test_unit_id</string>
    <string name="admob_banner_result_unit_id">@string/admob_banner_test_unit_id</string>

    <!--  =============================  release  ==========================       -->
<!--    <string name="admob_reward_unit_id">ca-app-pub-9923626397118153/6215617469</string>-->
<!--    <string name="admob_interstitial_unit_id">ca-app-pub-9923626397118153/4463552092</string>-->
<!--    <string name="admob_banner_main_unit_id">ca-app-pub-9923626397118153/1777038370</string>-->
<!--    <string name="admob_banner_choose_unit_id">ca-app-pub-9923626397118153/6379456347</string>-->
<!--    <string name="admob_banner_result_unit_id">ca-app-pub-9923626397118153/8814047990</string>-->

</resources>
