<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">


    <include layout="@layout/top_view"/>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="center"
        android:src="@mipmap/taijibagua"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="12dp"
        android:textColor="@color/black_111111"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:textColor="@color/black_343339"
        android:text="@string/app_descript"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:text="发送邮件"
            android:textColor="@color/black_343339"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/app_email"
            android:textColor="@color/black_343339"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/noduty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_343339"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/noduty"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_right_arrow"/>
    </LinearLayout>
</LinearLayout>