<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/share_current_lunar_width"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="@dimen/share_current_lunar_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/huangli_detail_bg_border_size">

        <LinearLayout
            android:layout_width="@dimen/share_current_lunar_width"
            android:layout_height="@dimen/huangli_detail_header_height"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/date_container"
                android:layout_width="320dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/date_background"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:alpha="0.1"
                    tools:src="@mipmap/shengxiao_gou"/>

                <TextView
                    android:id="@+id/ym"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2020年12月"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/black_343339"
                    android:textSize="@dimen/huangli_detail_lunar_text_size" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="29"
                    android:layout_below="@+id/ym"
                    android:textColor="@color/black_343339"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/huangli_detail_date_text_size" />

                <TextView
                    android:id="@+id/date_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_343339"
                    android:text="日"
                    android:layout_toEndOf="@+id/date"
                    android:layout_alignBaseline="@+id/date"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/lunar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/date"
                    android:layout_marginTop="@dimen/small_margin"
                    android:gravity="center"
                    android:textColor="@color/black_343339"
                    android:textSize="@dimen/huangli_detail_lunar_text_size" />

                <TextView
                    android:id="@+id/lunar_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lunar"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:textColor="@color/black_343339"
                    android:textSize="@dimen/normal_text_size" />

            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/card_bg_color" />

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingTop="@dimen/normal_margin"
                android:paddingBottom="@dimen/normal_margin">

                <com.duke.yinyangli.view.VerticalTextView
                    android:id="@+id/current_time_des"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:isCharCenter="true"
                    app:textSize="16sp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginTop="@dimen/small_margin" />

                <com.duke.yinyangli.view.VerticalTextView
                    android:id="@+id/current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    app:textSize="18sp"
                    app:textStyle="bold"
                    app:isCharCenter="true"
                    android:layout_marginTop="@dimen/small_margin" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="@dimen/share_current_lunar_width"
            android:layout_height="1dp"
            android:background="@color/card_bg_color" />

        <RelativeLayout
            android:layout_width="@dimen/share_current_lunar_width"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_yi"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/jinriyi"/>

            <TextView
                android:id="@+id/txt_yi"
                android:layout_width="match_parent"
                android:layout_toRightOf="@+id/img_yi"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/img_ji"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_below="@+id/txt_yi"
                android:src="@mipmap/jinriji"/>

            <TextView
                android:id="@+id/txt_ji"
                android:layout_width="match_parent"
                android:layout_toRightOf="@+id/img_ji"
                android:layout_alignTop="@+id/img_ji"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"/>

        </RelativeLayout>

        <View
            android:layout_width="@dimen/share_current_lunar_width"
            android:layout_height="1dp"
            android:background="@color/card_bg_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/huang_li_tai_shen_min_height">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TaiShenLabelTextStyle"
                        android:text="@string/xingxiu" />

                    <TextView
                        android:id="@+id/xing_xiu"
                        style="@style/TaiShenContentTextStyle"
                        android:layout_marginTop="@dimen/date_calculate_tab_margin_top" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/card_bg_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TaiShenLabelTextStyle"
                        android:text="@string/taishen" />

                    <TextView
                        android:id="@+id/tai_shen"
                        style="@style/TaiShenContentTextStyle"
                        android:layout_marginTop="@dimen/date_calculate_tab_margin_top" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/card_bg_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TaiShenLabelTextStyle"
                        android:text="@string/jishen" />

                    <TextView
                        android:id="@+id/ji_shen"
                        style="@style/TaiShenContentTextStyle"
                        android:layout_marginTop="@dimen/date_calculate_tab_margin_top" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/card_bg_color" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TaiShenLabelTextStyle"
                        android:text="@string/zhixing" />

                    <TextView
                        android:id="@+id/zhi_xing"
                        style="@style/TaiShenContentTextStyle"
                        android:layout_marginTop="@dimen/date_calculate_tab_margin_top" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/card_bg_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TaiShenLabelTextStyle"
                        android:text="@string/pengzu" />

                    <TextView
                        android:id="@+id/peng_zu1"
                        style="@style/TaiShenContentTextStyle"
                        android:layout_marginTop="@dimen/normal_margin" />

                    <TextView
                        android:id="@+id/peng_zu2"
                        style="@style/TaiShenContentTextStyle"
                        android:layout_marginTop="8dp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/card_bg_color" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TaiShenLabelTextStyle"
                        android:text="@string/wuxing" />

                    <TextView
                        android:id="@+id/wu_xing"
                        style="@style/TaiShenContentTextStyle"
                        android:layout_marginTop="@dimen/date_calculate_tab_margin_top" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/card_bg_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TaiShenLabelTextStyle"
                        android:text="@string/chongsha" />

                    <TextView
                        android:id="@+id/chong_sha"
                        style="@style/TaiShenContentTextStyle"
                        android:layout_marginTop="@dimen/date_calculate_tab_margin_top" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/card_bg_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TaiShenLabelTextStyle"
                        android:text="@string/jiuxing" />

                    <TextView
                        android:id="@+id/jiu_xing"
                        style="@style/TaiShenContentTextStyle"
                        android:layout_marginTop="@dimen/date_calculate_tab_margin_top" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="@dimen/share_current_lunar_width"
            android:layout_height="1dp"
            android:background="@color/card_bg_color" />

        <LinearLayout
            android:layout_width="@dimen/share_current_lunar_width"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/time_jixiong"
                android:layout_width="@dimen/share_current_lunar_width"
                android:layout_height="64dp"/>

        </LinearLayout>

        <View
            android:layout_width="@dimen/share_current_lunar_width"
            android:layout_height="1dp"
            android:background="@color/card_bg_color" />

        <!-- 这里是底部view -->
        <LinearLayout
            android:id="@+id/llBottomView"
            android:layout_width="@dimen/share_current_lunar_width"
            android:layout_height="88dp"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/app_name"
                    android:textColor="@color/black_333333"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/share_content"
                    android:textColor="@color/black_333333"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgQrCode"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@mipmap/qrcode" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>